# weekly-shop

./: .gitignore  README.md
.github/workflows/: ci.yml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/weeklyshop/: App.kt  InkCanvasView.kt  MainActivity.kt  ShopApi.kt
android/app/src/main/res/drawable/: bg_panel.xml  ic_basket.xml  ic_chevron_left.xml  ic_chevron_right.xml  ic_close.xml  ic_eraser.xml
android/app/src/main/res/layout/: activity_main.xml  basket_row.xml
android/app/src/main/res/values/: strings.xml  themes.xml
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/seed/: items.example.json
server/tests/: test_api.py  test_ink.py  test_matching.py  test_ocado_api.py
server/weekly_shop/: config.py  db.py  ink.py  main.py  matching.py  ocado.py  recognition.py  seed.py
server/weekly_shop/static/: panel.html
