[project]
name = "weekly-shop-server"
version = "0.1.0"
description = "Handwriting-to-Ocado-basket server for the wall tablet"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "rapidfuzz>=3.9",
    "pillow>=10.4",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weekly_shop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
